Update relative paths

--- a/layouts/index.hbs
+++ b/layouts/index.hbs
@@ -1,16 +1,13 @@
 {{>header}}
-    <ul class="recent">
+    <div class="recent">
     {{#each articles }}
-      <li>
-        <div class="title">
-          <a href="{{ paths.dir }}/{{ paths.base }}">
-            {{ title }}
-          </a>
-        </div>
-        <div class="date">{{ date }}</div>
-        <p>{{ blurb }}</p>
-      </li>
+      <div class="title">
+        <a href="{{ path }}">{{ title }}</a>
+      </div>
+
+      <div class="date">{{ date }}</div>
+      <p>{{ blurb }}</p>
     {{/each}}
-    </ul>
+    </div>
 
 {{>footer}}
